--- a/Client/package.json
+++ b/Client/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "eslint": "^6.6.0"
   },
   "private": true
 }
