--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
     "expo": "^35.0.0",
+    "expo-permissions": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
@@ -25,8 +26,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
-    "redux-logger": "^3.0.6",
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "redux-logger": "^3.0.6"
   },
   "private": true
 }
