--- a/Server/Api/package.json
+++ b/Server/Api/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "Server",
+  "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "expo-server-sdk": "^3.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.11"
   },
