--- a/Server/PushServer/package.json
+++ b/Server/PushServer/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "expo-server-sdk": "^3.4.0"
+    "expo-server-sdk": "^3.4.0",
+    "express": "^4.17.1"
   }
 }
