--- a/Server/Api/package.json
+++ b/Server/Api/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "expo-server-sdk": "^3.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.11"
